--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ html {
 }
 
 .nav-link {
-    background-color: #fefefe;
+    background-color: inherit;
     border-radius: 10px;
     transition: background-color 500ms;
     padding: 15px 20px;
@@ -16,7 +16,14 @@ html {
 }
 
 @media (prefers-color-scheme: dark) {
-
+body {
+margin: 5px;
+padding: 5px;
+background-color: #121212;
+    }
+    
+p {
+color: #fefefe;
 }
 
 img {
@@ -43,4 +50,5 @@ p {
 body {
 margin: 5px;
 padding: 5px;
+background-color: #fefefe;
     }
