--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ html {
 }
 
 .nav-link {
-    background-color: inherit;
+    background-color: #121212;
     border-radius: 10px;
     transition: background-color 500ms;
     padding: 15px 20px;
@@ -24,6 +24,11 @@ background-color: #121212;
     
 p {
 color: #fefefe;
+}
+    
+    .nav-link {
+    color: #fefefe;
+}
 }
 
 img {
