--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@ html {
 }
 
 .nav-link {
-    background-color: #inherit;
+    background-color: inherit;
     border-radius: 10px;
     transition: background-color 500ms;
     padding: 15px 20px;
