--- a/main.css
+++ b/main.css
@@ -67,8 +67,8 @@ background-color: #fefefe;
             
         p {
     font-size: 1rem;
-    color: #121212;
-    background-color: #fefefe;
+    color: #fefefe;
+    background-color: #121212;
 }    
          .container {
   overflow: hidden;
