--- a/main.css
+++ b/main.css
@@ -43,7 +43,7 @@ padding: 5px;
 
 
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
 body {
 background-color: #121212;
 color: #fefefe;
