--- a/main.css
+++ b/main.css
@@ -23,8 +23,7 @@ font-family: 'Source Sans Pro', sans-serif;
     border-radius: 10px;
     transition: background-color 500ms;
     padding: 15px 20px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: auto;
 }
 
 img {
