--- a/main.css
+++ b/main.css
@@ -23,7 +23,6 @@ font-family: 'Source Sans Pro', sans-serif;
     border-radius: 10px;
     transition: background-color 500ms;
     padding: 15px 20px;
-    text-align: center;
 }
 
 img {
@@ -46,24 +45,21 @@ p {
   content: '\00a0';
 }
 
-.container-fluid {
+nav {
+  margin: 25px;
   width: 350px;
-  height: 200px;  
- display: flex;
+  height: 200px;
+  display: flex;
   justify-content: center;
+
+ }
+ 
+ .center-navbar {
+  width: 50px;
+  height: 50px;
  }
  
 body {
 margin: 5px;
 padding: 5px;
     }
-
-
-
-@media (prefers-color-scheme: dark) {
-body {
-background-color: #121212;
-color: #fefefe;
-    }
-}
-
