--- a/main.css
+++ b/main.css
@@ -23,6 +23,10 @@ font-family: 'Source Sans Pro', sans-serif;
     border-radius: 10px;
     transition: background-color 500ms;
     padding: 15px 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 50px;
+    height: 50px;
 }
 
 img {
@@ -52,11 +56,6 @@ nav {
   display: flex;
   justify-content: center;
 
- }
- 
- .center-navbar {
-  width: 50px;
-  height: 50px;
  }
  
 body {
