--- a/main.css
+++ b/main.css
@@ -47,13 +47,22 @@ p {
   content: '\00a0';
 }
 
-nav {
-  margin: 25px;
-  width: 350px;
-  height: 200px;
-  display: flex;
-  justify-content: center;
-
+.navbar-center {
+ text-align: center;
+ align-items: center;
+ align-self: center;
+ align-content: center;
+ justify-items: center;
+ justify-self: center;
+ justify-content: center;
+ place-items: center;
+ vertical-align: middle;
+ line-height: 100%;
+ margin: auto;
+ positon: absolute;
+ left: 50%;
+ right: 50%;
+ transform: translate(-50%, -50%);
  }
  
 body {
