--- a/dark-mode.css
+++ b/dark-mode.css
@@ -7,8 +7,8 @@ color: #fefefe;
     }
   
 html {
-background-color: #272727;
-color: #fefefe;
+background-color: #fefefe;
+color: #272727;
 font-size: 19px;
 font-family: 'Source Sans Pro', sans-serif; 
 }
