--- a/dark-mode.css
+++ b/dark-mode.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap');
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
 body {
 background-color: #272727;
 color: #fefefe;
