--- a/main.css
+++ b/main.css
@@ -6,13 +6,17 @@ font-family: 'Source Sans Pro', sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
+ :root {
  --text-color: #fefefe;
  --background-color: #303030;
+ }
 }
 
 @media (prefers-color-scheme: light) {
+ :root {
  --text-color: #121212;
  --background-color: #fefefe;
+ }
 }
 
 .nav-link {
