--- a/main.css
+++ b/main.css
@@ -6,14 +6,14 @@ font-family: 'Source Sans Pro', sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
- :root {
+html {
  --text-color: #fefefe;
  --background-color: #303030;
  }
 }
 
 @media (prefers-color-scheme: light) {
- :root {
+html {
  --text-color: #121212;
  --background-color: #fefefe;
  }
